k8s/dashbaord-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
