k8s/ingestor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestor
spec:
  selector:
    app: ingestor
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
