k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testpulse
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /results
            pathType: Prefix
            backend:
              service:
                name: ingestor
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 8001
